# FMT

./: .gitignore  1  Automate_build_install_CMakeFMTVS2022vcpkg_MAM.bat  BFECFMTtests.py  CMakeFMTCYGWIN.sh  CMakeFMTMSYS2.sh  CMakeFMTMSYS2python.sh  CMakeFMTMSYS2rcran.sh  CMakeFMTMSYS2rcran42.sh  CMakeFMTMSYS2rcran42_release.sh  CMakeFMTMSYS2rcran43.sh  CMakeFMTMSYS2rcran43_release.sh  CMakeFMTMSYS2rcran44.sh  CMakeFMTMSYS2rcran44_release.sh  CMakeFMTMSYS2rcran45.sh  CMakeFMTMSYS2rcran45_release.sh  CMakeFMTSHAREDVS2017.bat  CMakeFMTSHAREDVS2022.bat  CMakeFMTVS2017.bat  CMakeFMTVS2017vcpkg.bat  CMakeFMTVS2022.bat  CMakeFMTVS2022vcpk_release.bat  CMakeFMTVS2022vcpkg.bat  CMakeFMTVS2022vcpkg_GL.bat  CMakeFMTVS2022vcpkg_GL_2.bat  CMakeFMTVS2022vcpkg_MAM.bat  CMakeFMTVS2022vcpkg_py27.bat  CMakeFMTVS2022vcpkg_release.bat  CMakeFMTVS2022vcpkg_update.bat  CMakeFMTVS2022vcpkggc.bat  CMakeFMTVS2022vcpkggc_release.bat  CMakeFMTVS2022vcpkggc_update.bat  CMakeFMTVS2022vcpkggcpy27.bat  CMakeFMT_MAM_NEW.bat  CMakeLists.txt  CompileforR4withmsys.sh  FMT.APS  FMT.cbp  FMT.cscope_file_list  FMT.depend  (+220 more)
Documentation/: FMT_Presolve.pptx  FMTdoxygenconfig  FORAC_carbone.pptx  commentsPythonandR.py
Documentation/html/: FMTGCBMtransition_8hpp.html  FMTaction_8cpp.html  FMTactualdevelopment_8cpp.html  FMTactualdevelopment_8hpp.html  FMTactualdevelopment_8hpp_source.html  FMTbasevertexproperties_8cpp.html  FMTbindingspatialaction_8hpp.html  FMTbindingspatialaction_8hpp_source.html  FMTcarbonpredictor_8hpp_source.html  FMTconstants_8hpp.html  FMTconstants_8hpp_source.html  FMTcoordinate_8hpp.html  FMTdata_8hpp.html  FMTdebugexceptionhandler_8hpp.html  FMTdebugexceptionhandler_8hpp_source.html  FMTdefaultexceptionhandler_8cpp.html  FMTdefaultexceptionhandler_8hpp.html  FMTdefaultlogger_8hpp.html  FMTdevelopment_8hpp_source.html  FMTdevelopmentpath_8hpp_source.html  FMTedgeproperties_8hpp_source.html  FMTeventcontainer_8cpp.html  FMTeventcontainer_8hpp_source.html  FMTeventrelation_8hpp_source.html  FMTexception_8hpp.html  FMTexpression_8hpp.html  FMTexpression_8hpp_source.html  FMTfork_8hpp.html  FMTfork_8hpp_source.html  FMTfreeexceptionhandler_8cpp.html  FMTfunctioncall_8hpp_source.html  FMTgraphdescription_8hpp.html  FMTgraphdescription_8hpp_source.html  FMTgraphvertextoyield_8hpp.html  FMTlandscapeparser_8cpp.html  FMTlifespans_8hpp_source.html  FMTlinegraph_8hpp.html  FMTlinegraph_8hpp_source.html  FMTlogger_8cpp.html  FMTlogger_8hpp_source.html  (+196 more)
Examples/C++/: CMakeLists.txt  FMTNsstest.cpp  FMTsetsolution.cpp  FMTsetsolutionbylp.cpp  GetCarbonpredictors.cpp  ParsersTests.cpp  PointToRasters.cpp  Simpleplanning.cpp  Spatial_doplanning.cpp  Spatialyexplicitsimulation.cpp  Spatialyexplicitsimulation_doplanning.cpp  TestSimpleplanning20p.cpp  UnitTestFMTParser.cpp  createmodel.cpp  doplanning.cpp  forcesolution.cpp  landaggregatestest.cpp  maptoFMTforest.cpp  nochoice.cpp  nonspatialupdate.cpp  planningtest.cpp  presolvetest.cpp  replanner.cpp  replanningmodeladaption.cpp  replanningtest.cpp  sasolve.cpp  solversTest.cpp  sumandavgtest.cpp  templatestest.cpp  testActionsAggregations.cpp  testActionsBuilder.cpp  testActionsBuilderMap.cpp  testActionsSplit.cpp  testGCBMtransitionparser.cpp  testOAschedulerBFEC.cpp  testOAschedulertask.cpp  testOPAreaclustering.cpp  testOutputType.cpp  test_rotations.cpp  testaddtomodel.cpp  (+20 more)
Examples/C++/ReleaseTesting/: CMakeLists.txt  ReleaseTesting.cpp
Examples/C++/tests/: basetests.csv
Examples/Python/: Initialareavariability.py  Multiplesolutionvariability.py  OperatingAreaheuristic.py  Operatingareaclustering.py  Operatingareascheduling.py  Replanner.py  Replanning.py  Shadowcost.py  Simpleplanning.py  Simpleprelanning.py  Spatialyexplicitoptimization.py  Spatialyexplicitreplanning.py  Spatialyexplicitsimulation.py  analyse.csv  createmodel.py  maptoFMTforest.py  replanning_EX1.bat  replanning_EX2.bat  testShadowcost.bat  testreplanner.bat  (+1 more)
Excel/: CMakeLists.txt
FMTWrapperCore/: CMakeLists.txt
Include/: FMTEventsGraph.h  FMTExcelExceptionHandler.h  FMTExcelLogger.h  FMTGCBMtransition.h  FMTGCBMtransition.hpp  FMTGraphInfo.h  FMTGraphValues.h  FMTPatchRules.h  FMTScopedSeTranslator.h  FMTSerie.h  FMTSerie.hpp  FMTSolutionTracker.h  FMTSpatialGraphs.h  FMTWorkerTask.h  FMTYieldDevelopment.h  FMTYieldsCache.h  FMTaction.h  FMTaction.hpp  FMTactionparser.h  FMTactionparser.hpp  FMTactualdevelopment.h  FMTactualdevelopment.hpp  FMTageyieldhandler.h  FMTageyieldhandler.hpp  FMTareaparser.h  FMTareaparser.hpp  FMTbaseedgeproperties.h  FMTbasevertexproperties.h  FMTbasevertexproperties.hpp  FMTbindingspatialaction.h  FMTbindingspatialaction.hpp  FMTbounds.hpp  FMTcomplexyieldhandler.h  FMTcomplexyieldhandler.hpp  FMTconstantparser.h  FMTconstantparser.hpp  FMTconstants.h  FMTconstants.hpp  FMTconstraint.h  FMTconstraint.hpp  (+244 more)
Modules/: FindGDAL.cmake  FindGDALCUSTOM.cmake  FindGEOS.cmake  FindMosek.cmake  FindOSI.cmake  FindR.cmake  FindRcpp.cmake  Findonnxruntime.cmake
Rpackage/: readme.txt
Source/: FMTCore.h  FMTCore.hpp  FMTExcelExceptionHandler.cpp  FMTExcelLogger.cpp  FMTGCBMtransition.cpp  FMTGCBMtransition.h  FMTGCBMtransition.hpp  FMTGraphInfo.cpp  FMTGraphValues.cpp  FMTModels.h  FMTModels.hpp  FMTPatchRules.cpp  FMTScopedSeTranslator.cpp  FMTSerie.cpp  FMTSolutionTracker.cpp  FMTSpatialGraphs.cpp  FMTSpatials.h  FMTSpatials.hpp  FMTVirtualLineGraph.cpp  FMTWorkerTask.cpp  FMTYieldDevelopment.cpp  FMTYieldsCache.cpp  FMTaction.cpp  FMTaction.h  FMTaction.hpp  FMTactionparser.cpp  FMTactionparser.h  FMTactionparser.hpp  FMTactualdevelopment.cpp  FMTactualdevelopment.h  FMTactualdevelopment.hpp  FMTageyieldhandler.cpp  FMTageyieldhandler.h  FMTageyieldhandler.hpp  FMTareaparser.cpp  FMTareaparser.h  FMTareaparser.hpp  FMTbaseedgeproperties.cpp  FMTbaseedgeproperties.h  FMTbaseedgeproperties.hpp  (+370 more)
Templates/: __init__.py.in  setup.py.in
UI/: .gitignore  CMakeLists.txt  userDefineLang.xml
cmake/: BaseInstall.cmake  ConfigFunctions.cmake  ReleaseInstall.cmake
docs/: index.html  index.json  index.xml  manifest.webmanifest  robots.txt  sitemap.xml
(+1109 files in other folders)
